Fix padding while dragging and overflow.

--- a/assets/vue_app_overrides.css
+++ b/assets/vue_app_overrides.css
@@ -1086,6 +1086,9 @@
     text-align: left;
   }
 }
+.mfb-builder {
+  overflow: hidden;
+}
 @media screen and (min-width: 700px) {
   .mfb-builder {
     width: 60%;
@@ -1175,9 +1178,9 @@
 .mfb-show-mobile-palette > .el-button {
   min-width: 200px;
 }
-.mfb-element-root > .mfb-element-children > .dnd-cont > .dnd-it {
-  padding-left: 0;
-  padding-right: 0;
+.mfb-element-root {
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
 }
 .mfb-config-dialog > .el-dialog {
   width: 90%;
@@ -1225,6 +1228,9 @@
   color: #575555;
   border-color: #18CBDB;
   box-shadow: 0 0 3px #1AE3F2;
+}
+.page-node-wizard-form {
+  overflow: hidden;
 }
 .page-node-wizard-form .el-select-dropdown__item {
   color: #666;
